# uncle-val

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  boards.html  hyrax_config.toml  pyproject.toml
.github/ISSUE_TEMPLATE/: 1-bug_report.md
.github/workflows/: build-documentation.yml  pre-commit-ci.yml  publish-to-pypi.yml  smoke-test.yml  testing-and-coverage.yml
docs/: conf.py  index.rst  learning_loop_diagram.html  notebooks.rst
docs/notebooks/: motivation.ipynb
docs/pre_executed/: .gitignore  demo.ipynb  demo_one-band.ipynb  dp1-object-forced-source.ipynb  dp1_object_forcedDiaSource.ipynb  dp1_object_forcedSource.ipynb  histograms.ipynb
models/2026-06-10_DP2_Object_ForcedSource/: MLPModel.onnx  MLPModel.onnx.data  MLPModel.pt  events.out.tfevents.1782827902.gondor.astro.washington.edu.2716261.0  survey_config.json  training_config.json
models/2026-07-08_DP2_Object_ForcedDiffSource/: MLPModel.onnx  survey_config.json
models/2026-07-08_DP2_Object_ForcedSource/: MLPModel.onnx  events.out.tfevents.1783425777.gondor.astro.washington.edu.425982.0  survey_config.json
models/2026-07-16_DP1_Object_ForcedDiffSource/: MLPModel.onnx  survey_config.json
models/2026-07-16_DP1_Object_ForcedSource/: MLPModel.onnx  survey_config.json
scripts/: count_trainable_lcs.py  detector-centers.py  fetch_dp2_ccd_visit.py  plot_kl.py  plot_reduced_chi2.py  prepare_ccd_visit_feather.py
src/uncle_val/: consts.py  datasets.py  models.py  stat_tests.py  variability_detectors.py  whitening.py
src/uncle_val/datasets/: __init__.py  dp1.py  fake.py  lsdb_generator.py  materialized.py  rubin_dp.py
src/uncle_val/learning/: feature_importance.py  losses.py  lsdb_data_generator.py  lsdb_dataset.py  models.py  pipeline.py  training.py
src/uncle_val/pipelines/: __init__.py  dp1_constant_magerr.py  dp1_feature_importance.py  dp1_linear_flux_err.py  dp1_mlp.py  plotting.py  rubin_dp_constant_magerr.py  rubin_dp_feature_importance.py  rubin_dp_linear_flux_err.py  rubin_dp_mlp.py  splits.py  train_on_rubin_dp.py  training_config.py  training_loop.py  utils.py  validation_set_utils.py
src/uncle_val/utils/: __init__.py  config_validation.py  dask_client.py  hashing.py  import_by_name.py  mag_flux.py  variable.py
tests/scripts/: prepare_test_data.py
tests/uncle_val/: conftest.py  test_models.py  test_packaging.py  test_variability_detectors.py  test_whitening.py
tests/uncle_val/datasets/: test_dp1.py  test_fake.py  test_rubin_dp.py
tests/uncle_val/learning/: test_lsdb_data_generator.py  test_lsdb_dataset.py  test_models.py  test_pipeline.py
tests/uncle_val/pipelines/: test_feature_importance.py  test_splits.py  (+2 more)
(+146 files in other folders)
