
[project]
name = "uncle-val"
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
authors = [
    { name = "Konstantin Malanchev", email = "malanchev@cmu.edu" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
]
dynamic = ["version"]
requires-python = ">=3.11"
dependencies = [
    "cityhash>=0.4.9",  # provides cityhash and farmhash
    "dask[distributed]",  # version from lsdb
    "hats",  # version from lsdb
    "lsdb>=0.6.7,<0.8",
    "nested-pandas",
    "numba>=0.62.1",
    "numpy>=2",
    "onnxscript>=0.5.3",
    "scipy>=1",
    "tensorboard>=2",
    "torch>=2.8.0,<3",
    "tqdm>=4",
]

[project.urls]
"Source Code" = "https://github.com/lincc-frameworks/uncle-val"

# On a mac, install optional dependencies with `pip install '.[dev]'` (include the single quotes)
[project.optional-dependencies]
dev = [
    "jax",  # Used to test whitening functions
    "jupyter", # Clears output from Jupyter notebooks
    "pre-commit", # Used to run checks before finalizing a git commit
    "pytest",
    "pytest-cov", # Used to report total code coverage
    "ruff", # Used for static linting of files
]

[build-system]
requires = [
    "setuptools>=62", # Used to build and package the Python project
    "setuptools_scm>=6.2", # Gets release version from git. Makes it available programmatically
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "src/uncle_val/_version.py"

[tool.pytest.ini_options]
testpaths = [
    "tests",
    "src",
    "docs",
]
addopts = "--doctest-modules --doctest-glob=*.rst"
markers = [
    "long",
]

[tool.ruff]
line-length = 110
target-version = "py311"
[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    "W",
    # Pyflakes
    "F",
    # pep8-naming
    "N",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # docstrings
    "D101",
    "D102",
    "D103",
    "D106",
    "D206",
    "D207",
    "D208",
    "D300",
    "D417",
    "D419",
    # Numpy v2.0 compatibility
    "NPY201",
]
ignore = [
    "UP006", # Allow non standard library generics in type hints
    "UP007", # Allow Union in type hints
    "SIM114", # Allow if with same arms
    "B028", # Allow default warning level
    "SIM117", # Allow nested with
    "UP015", # Allow redundant open parameters
    "UP028", # Allow yield in for loop
]


[tool.coverage.run]
omit=["src/uncle_val/_version.py"]
